src/service/slack/snapshots/slack_app__service__slack__tests__alert_message_with_chart.snap
---
source: slack-app/src/service/slack/tests.rs
expression: message
---
attachments:
  - blocks:
      - type: section
        text:
          type: plain_text
          text: ":white_check_mark: Alert was resolved"
          emoji: true
      - type: section
        text:
          type: mrkdwn
          text: "High Error Rate for \"api\" [environment=production]"
        fields:
          - type: mrkdwn
            text: "*Severity*\n:question: Unknown"
          - type: mrkdwn
            text: "*Created*\n1970-01-01 0:00:00.0 +00:00:00"
      - type: image
        image_url: "http://localhost:3031/api/chart/1234"
        alt_text: "Chart for slo `unknown`"
    color: "#2EC95A"

