src/service/slack/snapshots/slack_app__service__slack__tests__resolved_alert_message.snap
---
source: slack-app/src/service/slack/tests.rs
expression: message
---
blocks:
  - type: section
    fields:
      - type: mrkdwn
        text: ":white_check_mark: ~High Error Rate for \"api\" [environment=production]~"

